--- a/md/index.html
+++ b/md/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting…</title>
-  <link rel="canonical" href="http://localhost:4000/markdown/">
-  <meta http-equiv="refresh" content="0; url=http://localhost:4000/markdown/">
+  <link rel="canonical" href="http://localhost:4000/home/markdown/">
+  <meta http-equiv="refresh" content="0; url=http://localhost:4000/home/markdown/">
   <h1>Redirecting…</h1>
-  <a href="http://localhost:4000/markdown/">Click here if you are not redirected.</a>
-  <script>location="http://localhost:4000/markdown/"</script>
+  <a href="http://localhost:4000/home/markdown/">Click here if you are not redirected.</a>
+  <script>location="http://localhost:4000/home/markdown/"</script>
 </html>
