--- a/md/index.html
+++ b/md/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting…</title>
-  <link rel="canonical" href="https://mpicci.github.io//%20/markdown/">
-  <meta http-equiv="refresh" content="0; url=https://mpicci.github.io//%20/markdown/">
+  <link rel="canonical" href="https://mpicci.github.io///markdown/">
+  <meta http-equiv="refresh" content="0; url=https://mpicci.github.io///markdown/">
   <h1>Redirecting…</h1>
-  <a href="https://mpicci.github.io//%20/markdown/">Click here if you are not redirected.</a>
-  <script>location="https://mpicci.github.io//%20/markdown/"</script>
+  <a href="https://mpicci.github.io///markdown/">Click here if you are not redirected.</a>
+  <script>location="https://mpicci.github.io///markdown/"</script>
 </html>
