--- a/nmp/index.html
+++ b/nmp/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting…</title>
-  <link rel="canonical" href="https://mpicci.github.io//%20/non-menu-page/">
-  <meta http-equiv="refresh" content="0; url=https://mpicci.github.io//%20/non-menu-page/">
+  <link rel="canonical" href="https://mpicci.github.io///non-menu-page/">
+  <meta http-equiv="refresh" content="0; url=https://mpicci.github.io///non-menu-page/">
   <h1>Redirecting…</h1>
-  <a href="https://mpicci.github.io//%20/non-menu-page/">Click here if you are not redirected.</a>
-  <script>location="https://mpicci.github.io//%20/non-menu-page/"</script>
+  <a href="https://mpicci.github.io///non-menu-page/">Click here if you are not redirected.</a>
+  <script>location="https://mpicci.github.io///non-menu-page/"</script>
 </html>
