--- a/about/index.html
+++ b/about/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting…</title>
-  <link rel="canonical" href="https://mpicci.github.io///">
-  <meta http-equiv="refresh" content="0; url=https://mpicci.github.io///">
+  <link rel="canonical" href="https://mpicci.github.io/">
+  <meta http-equiv="refresh" content="0; url=https://mpicci.github.io/">
   <h1>Redirecting…</h1>
-  <a href="https://mpicci.github.io///">Click here if you are not redirected.</a>
-  <script>location="https://mpicci.github.io///"</script>
+  <a href="https://mpicci.github.io/">Click here if you are not redirected.</a>
+  <script>location="https://mpicci.github.io/"</script>
 </html>
