--- a/resume.html
+++ b/resume.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting…</title>
-  <link rel="canonical" href="https://mpicci.github.io///cv/">
-  <meta http-equiv="refresh" content="0; url=https://mpicci.github.io///cv/">
+  <link rel="canonical" href="https://mpicci.github.io/cv/">
+  <meta http-equiv="refresh" content="0; url=https://mpicci.github.io/cv/">
   <h1>Redirecting…</h1>
-  <a href="https://mpicci.github.io///cv/">Click here if you are not redirected.</a>
-  <script>location="https://mpicci.github.io///cv/"</script>
+  <a href="https://mpicci.github.io/cv/">Click here if you are not redirected.</a>
+  <script>location="https://mpicci.github.io/cv/"</script>
 </html>
