--- a/cv/index.html
+++ b/cv/index.html
@@ -239,6 +239,7 @@
   <li>Ph.D in Electrical Engineering, West Virginia University WVU, 2017 (expected)
     <ul>
       <li>Biometric, Computer Vision, Machine Learning</li>
+      <li>Filled requirements for MS Computer Science</li>
     </ul>
   </li>
   <li>&#8220;Laurea&#8221; degree in Telecommunication Engineering, Padova University, ITALY 2007
@@ -277,7 +278,7 @@
       <li>C/C++, Java, Python</li>
       <li>Labview, Assembly M68000</li>
       <li>Matlab, R, Numpy, Scipy</li>
-      <li>OPENCV, PCL, ROS, VTK, OPENGL, FLANN, Boost, Qt, VXL</li>
+      <li>OPENCV, PCL, ROS, VTK, OPENGL, FLANN, Boost, Qt, VXL, NLTK</li>
       <li>OpenNI, Microsoft Kinect SDK</li>
       <li>Linux (advanced), Window, Unix, Bash/csh scripting</li>
       <li>Android: SDK, NDK</li>
