--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Previously I obtained D.Ing. in Telecomunication degree from the <a href="http:/
 <p>I was born in a little town, in Abruzzo region of Italy. in a mountainous area close to the Adriatic sea.
 I always had an innate curiosity for almost everything, often driving the people around me crazy to answer all my questions.
 And, after many years, it’s still my main peculiarity, as my dear friends know.
-This curiosity made me follow a strange path: I left home for a better high school far away from home, then to one of the <a href="http://www.unipd.it/en/">oldest University in the World</a>, and for now in the Wild <a href="http://www.wvu.edu/">West Virginia</a>.</p>
+This curiosity made me follow a strange path: I left home for a better high school far away from home, then to one of the <a href="http://www.unipd.it/en/">oldest University in the World</a>, and for now in the Wild and Wonderful <a href="http://www.wvu.edu/">West Virginia</a>.</p>
 
 <!--
 Although my fundamental interests for math, and physics, I was always astonished by the applications, and repercussions on applied science. 
