--- a/portfolio/2014-06-05-3D_face/index.html
+++ b/portfolio/2014-06-05-3D_face/index.html
@@ -582,6 +582,12 @@ store on memory the image.</p>
 
 
 
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+
+
+
 
   </body>
 </html>
