mathjax problem solved

--- a/collection-archive/index.html
+++ b/collection-archive/index.html
@@ -400,7 +400,7 @@
 
     <h2 class="archive__item-title" itemprop="headline">
       
-        <a href="https://mpicci.github.io/portfoglio/2016-12-05 CPE691A" rel="permalink">Voice Verification of similar speech.
+        <a href="https://mpicci.github.io/portfolio/2016-12-05 CPE691A" rel="permalink">Voice Verification of similar speech.
 </a>
       
     </h2>
