--- a/portfolio/2016-12-05 CPE691A.html
+++ b/portfolio/2016-12-05 CPE691A.html
@@ -754,6 +754,10 @@ roughly 84 % in the test set.</p>
 
 
 
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+
 
 
 
